--- a/Website/packages.config
+++ b/Website/packages.config
@@ -8,6 +8,7 @@
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net40" />
   <package id="elmah.sqlserver" version="1.2" />
   <package id="EntityFramework" version="4.3.1" />
+  <package id="FontAwesome" version="3.0.2.3" targetFramework="net45" />
   <package id="jQuery" version="1.6.2" />
   <package id="jQuery.Validation" version="1.8.1" />
   <package id="knockoutjs" version="2.2.1" targetFramework="net45" />
