--- a/Website/Website.csproj
+++ b/Website/Website.csproj
@@ -299,6 +299,7 @@
     <Compile Include="Entities\CuratedPackage.cs" />
     <Compile Include="Entities\GallerySetting.cs" />
     <Compile Include="Entities\IEntitiesContext.cs" />
+    <Compile Include="Entities\UserFollowsPackage.cs" />
     <Compile Include="Entities\PackageFramework.cs" />
     <Compile Include="Entities\ReadOnlyModeException.cs" />
     <Compile Include="Filters\CacheFilter.cs" />
@@ -476,6 +477,10 @@
     <Compile Include="Migrations\201302282115583_AddMinRequiredVersionColumn.cs" />
     <Compile Include="Migrations\201302282115583_AddMinRequiredVersionColumn.Designer.cs">
       <DependentUpon>201302282115583_AddMinRequiredVersionColumn.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201303222130335_Favorites.cs" />
+    <Compile Include="Migrations\201303222130335_Favorites.Designer.cs">
+      <DependentUpon>201303222130335_Favorites.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\MigrationsConfiguration.cs" />
     <Compile Include="Migrations\SqlResourceMigration.cs" />
