Email ssl configuration added.

--- a/Website/Web.config
+++ b/Website/Web.config
@@ -18,6 +18,9 @@
         <section name="dataCacheClients" type="Microsoft.ApplicationServer.Caching.DataCacheClientsSection, Microsoft.ApplicationServer.Caching.Core" allowLocation="true" allowDefinition="Everywhere" />
     </configSections>
     <appSettings>
+
+        <add key="Smtp.EnableSsl" value="false" />
+      
         <add key="reCAPTCHA::PrivateKey" value="6LcebdwSAAAAAI5dI90LpPMFGKDxdCt6fjwEwMut" />
         <!-- development only key, override on live site -->
         <add key="reCAPTCHA::PublicKey" value="6LcebdwSAAAAAFI06sH9RRb2VP1HFCjYpg74lKG7" />
